--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </script>
 					</span>
 					<span class="fa fa-home">&nbsp;
-					<a href="http://aszamzam.info">http://www.ASZamzam.info</a>
+					<a href="https://aszamzam.info">https://www.ASZamzam.info</a>
 					</span>
 				</header>
 				<nav id="nav">
@@ -75,6 +75,7 @@
 										<h2>Bio</h2>
 									</header>
 									<p>I'm a PhD Candidate at the Department of Electrical and Computer Engineering at the University of Minnesota. Also, I am affiliated with Signal and Tensor Analytics Research (STAR) group under the supervision of Professor Nikos D. Sidiropoulos. Previously, I earned my BSc from the Department of Electronics and Electrical Communications Engineering at ﻿Cairo University﻿ in 2013. In 2015, I received my MSc from Nile University in Wireless Communications. From 2013 to 2015, I was working as a research assistant at Wireless Intelligent Networks Center at Nile University.</p>
+									<p> I received the Louis John Schnell Fellowship (2015), the Doctoral Dissertation Fellowship (2018) from the University of Minnesota. I also received the Student Travel Awards from IEEE Signal Processing Society (2017), IEEE Power and Energy Society (2018), and Council of Graduate Students at the University of Minnesota (2016, 2018).</p>
 								<!-- </div> -->
 								<!-- <div class="container"> -->
 									<header>
@@ -150,66 +151,77 @@
 		              <h3>Working Papers</h3>
 						<ul class="publications">
 							<!--  -->
-							<li tags="Journal Papers">
-							<a href="publications/PSSE_NN.pdf" class="fa fa-file-pdf-o download"></a>
-							<u>Ahmed S. Zamzam</u>,
-							Xiao Fu, and Nikos D. Sidiropoulos,
-							<span class="title">"Learning to Initialize: Neural Network-Based Distribution System State Estimation".</span>
-							</li>
 							<!--  -->
 							<li tags="Journal Papers">
-							<a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a>
-							<u>Ahmed S. Zamzam</u>,
-							Emiliano Dall'Anese, Sairaj Dhople, and Nikos D. Sidiropoulos,
+							<!-- <a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a> -->
+							Vassilis N. Ioannidis, <u>Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos,
+							<span class="title">"Imputation of coupled tensors and graphs for Community Detection under Misses".</span>
+							</li>
+							<li tags="Journal Papers">
+							<!-- <a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a> -->
+							<u>Ahmed S. Zamzam</u>,	Emiliano Dall'Anese, Sairaj Dhople, and Nikos D. Sidiropoulos,
 							<span class="title">"Optimal Energy Storage Management Under Uncertainties".</span>
 							</li>
 						</ul>
 		              <h3>Journal Publications</h3>
 						<ul class="publications">
 			              <!--  -->
+						  <li tags="Journal Papers">
+							<a href="publications/TSG_ZFS_2018.pdf" class="fa fa-file-pdf-o download"></a>
+							<u>Ahmed S. Zamzam</u>,	Xiao Fu, and Nikos D. Sidiropoulos,
+							<span class="title">"Data-Driven Learning-Based Optimization for Distribution System State Estimation".</span> (Submitted)
+							</li>
 			              <li tags="">
-						  <a href="publications/PSSE_NN.pdf" class="fa fa-file-pdf-o download"></a>
+						  <a href="Publications/TCNS_ZDZTS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u>Ahmed S. Zamzam</u>, Emiliano Dall'Anese, Changhong Zhao, Josh A. Taylor, and Nikos D. Sidiropoulos,
 							<span class="title">"Optimal Water-Power Flow Problem: Formulation and Distributed Optimal
 							Solution,"</span> in IEEE Transactions on  Control Networked Systems. (Accepted)
 			              </li>
 			              <!--  -->
 			              <li tags="">
-						  <a href="publications/PSSE_NN.pdf" class="fa fa-file-pdf-o download"></a>
+						  <a href="Publications/TSP_WZGS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 			              Gang Wang, <u>Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos,
 							<span class="title">"Power System State Estimation via Feasible Point Pursuit: Algorithms and Cramer-Rao Bound,"</span> in IEEE Transactions on Signal Processing, vol. 66, no. 6, pp. 1649-1658, March 2018.
 			              </li>
 			              <li tags="">
-						  <a href="publications/PSSE_NN.pdf" class="fa fa-file-pdf-o download"></a>
+						  <a href="Publications/TSG_ZSD_2017.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u>Ahmed S. Zamzam</u>,  Nikos D. Sidiropoulos, and Emiliano Dall'Anese,
 							<span class="title">"Beyond Relaxation and Newton-Raphson: Solving AC OPF for Multi-phase Systems with Renewables,"</span> in IEEE Transactions on Smart Grid. (Accepted)
 			              </li>
 						  <li tags="">
-						  <a href="publications/PSSE_NN.pdf" class="fa fa-file-pdf-o download"></a>
+						  <a href="Publications/TWC_ZENM_2015.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u>Ahmed S. Zamzam</u>,  Amr El-Keyi, Mohamed Nafie, and Yahia Mohasseb,
 							<span class="title">"On the Degrees of Freedom of the Two-Cell Two-Hop MIMO Network with Dedicated and Shared Relays,"</span> in IEEE Transactions Wireless Communications, vol. 14, no. 12, pp. 6738 - 6751, July 2015.
 			              </li>
 						</ul>
 		              <h3>Conference Publications</h3>
 		              <ul class="publications">
+						  <li tags="">
+						  <a href="Publications/CDC_ZDS_2018.pdf" class="fa fa-file-pdf-o download"></a>
+			              <u> Ahmed S. Zamzam</u>, Emiliano Dall'Anese, and Nikos D. Sidiropoulos, <span class="title"> "A Dantzig-Wolfe Decomposition
+							Based Approach for Distributed Storage Management"</span> in Proc. of the 57th IEEE Conference on Decision and Control, Maimi, FL, Dec. 2018.
+			              </li>
+						  <li tags="">
+						  <a href="Publications/GlobalSIP_IZGS_2018.pdf" class="fa fa-file-pdf-o download"></a>
+			              Vassilis N. Ioannidis, <u> Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos, <span class="title"> "Imputations of Coupled Tensors AND Graphs,"</span> in Proc. Globalsip Conf., Anaheim, CA, Nov. 2018.
+			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/SPAWC_IZFS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 			              Mohamed Ibrahim, <u> Ahmed S. Zamzam</u>, Xiao Fu, and Nikos D. Sidiropoulos, <span class="title"> "Learning-based
 							Antenna Selection,"</span> in Proc. of SPAWC, Kalamata, Greece, June 2018.
 			              </li>
 			              <!--  -->
-			              <li tags="">
-			              <u> Ahmed S. Zamzam</u>, Emiliano Dall'Anese, and Nikos D. Sidiropoulos, <span class="title"> "A Dantzig-Wolfe Decomposition
-							Based Approach for Distributed Storage Management"</span>. (Submitted) 
-			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/SDM_YZS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 			              Bo Yang, <u> Ahmed S. Zamzam</u>, and Nikos D. Sidiropoulos, <span class="title"> "ParaSketch: Parallel Tensor
 							Factorization via Sketching,"</span> in Proc. SIAM Conf. on Data Mining, San Diego,
 							CA, May 2018. <!-- (acceptance rate: 23.2 &#37;) -->
 			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/CAMSAP_ZFDS_2017.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u> Ahmed S. Zamzam</u>, Xiao Fu, Emiliano Dall'Anese, and Nikos D. Sidiropoulos, <span class="title"> "Distributed
 							Feasible Point Pursuit for Optimal power Flow Problems,"</span>  in Proc. IEEE International
 							Workshop on Computational Advances in Multi-Sensor Adaptive Processing, Curacao,
@@ -217,28 +229,33 @@
 			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/GlobalSIP_KZD_2017.pdf" class="fa fa-file-pdf-o download"></a>
 			              Aritra Konar, <u> Ahmed S. Zamzam</u>, and Nikos D. Sidiropoulos, <span class="title"> "Decentralized Power System
 							State Estimation via Non-convex Multi-agent Optimization,"</span> in Proc. Globalsip
 							Conf., Montreal, QC, Nov. 2017.
 			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/IREP_ZZDS_2017.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u> Ahmed S. Zamzam</u>, Changhong Zhao, Emiliano Dall'Anese, and Nikos D. Sidiropoulos, <span class="title"> A QCQP
 							Approach for OPF in Multiphase Radial Networks with Wye and Delta Connections,"</span>
 							in Proc. IREP Bulk Power Systems Dynamics and Control Symposium, Espinho, Portugal, Aug. 2017.
 			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/GlobalSIP_WZGS_2016.pdf" class="fa fa-file-pdf-o download"></a>
 			              Gang Wang, <u> Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos, <span class="title"> "Power
 							System State Estimation via Feasible Point Pursuit,"</span> in Proc. Globalsip Conf., Washington, DC, Dec. 2016.
 			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/Asilomar_ZID_2016.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u> Ahmed S. Zamzam</u>, Vassilis N. Ioannidis, and Nikos D. Sidiropoulos, <span class="title"> "Coupled Graph Tensor
 							Factorization,"</span> in Proc. of Asilomar Conf., Pacific Grove, CA, Nov. 2016.
 			              </li>
 			              <!--  -->
 			              <li tags="">
+						  <a href="Publications/GlobeCOM_ZENM_2014.pdf" class="fa fa-file-pdf-o download"></a>
 			              <u>Ahmed S. Zamzam</u>,  Amr El-Keyi, Mohamed Nafie, and Yahia Mohasseb,
 							<span class="title"> "Degrees of Freedom
 								for a two-cell relay network with soft handoffs,"</span> in Proc. Globecom Conf. Austin, TX, Dec. 2014.
