--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 						<!--<li><a href="#four" class="fa fa-users">&nbsp; Students</a></li>-->
 						<li><a href="#three" class="fa fa-book">&nbsp; Publications</a></li>
 						<li><a href="#four" class="fa fa-inbox">&nbsp; Contact Me</a></li>
+						<li><a href="Publications/AZ_resume.pdf" class="fa fa-inbox">&nbsp; Resume</a></li>
 					</ul>
 				</nav>
 				<!-- <footer>
@@ -167,7 +168,7 @@
 						<ul class="publications">
 			              <!--  -->
 						  <li tags="Journal Papers">
-							<a href="publications/TSG_ZFS_2018.pdf" class="fa fa-file-pdf-o download"></a>
+							<a href="Publications/TSG_ZFS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 							<u>Ahmed S. Zamzam</u>,	Xiao Fu, and Nikos D. Sidiropoulos,
 							<span class="title">"Data-Driven Learning-Based Optimization for Distribution System State Estimation".</span> (Submitted)
 							</li>
