--- a/index.html
+++ b/index.html
@@ -155,11 +155,6 @@
 							<!--  -->
 							<li tags="Journal Papers">
 							<!-- <a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a> -->
-							Vassilis N. Ioannidis, <u>Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos,
-							<span class="title">"Imputation of coupled tensors and graphs for Community Detection under Misses".</span>
-							</li>
-							<li tags="Journal Papers">
-							<!-- <a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a> -->
 							<u>Ahmed S. Zamzam</u>,	Emiliano Dall'Anese, Sairaj Dhople, and Nikos D. Sidiropoulos,
 							<span class="title">"Optimal Energy Storage Management Under Uncertainties".</span>
 							</li>
@@ -167,6 +162,16 @@
 		              <h3>Journal Publications</h3>
 						<ul class="publications">
 			              <!--  -->
+						<li tags="Journal Papers">
+							<a href="publications/TKDE_IZGS_2018.pdf" class="fa fa-file-pdf-o download"></a> 
+							Vassilis N. Ioannidis, <u>Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos,
+							<span class="title">"Coupled Graphs and Tensor Factorization for Recommender Systems and Community Detection".</span>
+							</li>
+						<li tags="Journal Papers">
+							<a href="publications/TSP_YZS_2018.pdf" class="fa fa-file-pdf-o download"></a>
+							Bo Yang, <u>Ahmed S. Zamzam</u>, and Nikos D. Sidiropoulos,
+							<span class="title">"Large Scale Tensor Factorization via Parallel Sketches".</span>
+							</li>
 						  <li tags="Journal Papers">
 							<a href="Publications/TSG_ZFS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 							<u>Ahmed S. Zamzam</u>,	Xiao Fu, and Nikos D. Sidiropoulos,
