--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 							<!--  -->
 							<li tags="Journal Papers">
 							<!-- <a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a> -->
-							<u>Ahmed S. Zamzam</u>,	Emiliano Dall'Anese, Sairaj Dhople, and Nikos D. Sidiropoulos,
-							<span class="title">"Optimal Energy Storage Management Under Uncertainties".</span>
+							<u>Ahmed S. Zamzam</u>,	Bo Yang, and Nikos D. Sidiropoulos,
+							<span class="title">"Deep Reinforcement Learning for Online Storage Management".</span>
 							</li>
 						</ul>
 		              <h3>Journal Publications</h3>
