--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<ul class="publications">
 							<!--  -->
 							<!--  -->
-							<li tags="Journal Papers">
+							<li tags="Conference Papers">
 							<!-- <a href="publications/CSM.pdf" class="fa fa-file-pdf-o download"></a> -->
 							<u>Ahmed S. Zamzam</u>,	Bo Yang, and Nikos D. Sidiropoulos,
 							<span class="title">"Deep Reinforcement Learning for Online Storage Management".</span>
@@ -165,12 +165,12 @@
 						<li tags="Journal Papers">
 							<a href="publications/TKDE_IZGS_2018.pdf" class="fa fa-file-pdf-o download"></a> 
 							Vassilis N. Ioannidis, <u>Ahmed S. Zamzam</u>, Georgios B. Giannakis, and Nikos D. Sidiropoulos,
-							<span class="title">"Coupled Graphs and Tensor Factorization for Recommender Systems and Community Detection".</span>
+							<span class="title">"Coupled Graphs and Tensor Factorization for Recommender Systems and Community Detection".</span> (Submitted)
 							</li>
 						<li tags="Journal Papers">
 							<a href="publications/TSP_YZS_2018.pdf" class="fa fa-file-pdf-o download"></a>
 							Bo Yang, <u>Ahmed S. Zamzam</u>, and Nikos D. Sidiropoulos,
-							<span class="title">"Large Scale Tensor Factorization via Parallel Sketches".</span>
+							<span class="title">"Large Scale Tensor Factorization via Parallel Sketches".</span> (Submitted)
 							</li>
 						  <li tags="Journal Papers">
 							<a href="Publications/TSG_ZFS_2018.pdf" class="fa fa-file-pdf-o download"></a>
